--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="import" href="%PUBLIC_URL%/traces.json">
-    <link rel="import" href="%PUBLIC_URL%/striatum_f410_traces.json">
-    <link rel="import" href="%PUBLIC_URL%/striatum_f410_contours.json">
+    <link rel="application/json" href="%PUBLIC_URL%/striatum_f410_traces.json">
+    <link rel="application/json" href="%PUBLIC_URL%/striatum_f410_contours.json">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
